added navigation and basic styling

--- a/about_us.html
+++ b/about_us.html
@@ -3,15 +3,20 @@
     <head>
         <title>Travelot Adventures</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="travel_recommendation.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
+        <div class="navbar">
+            <div class="company">
+                <h4>Travelot Adventures</h4>
+            </div
         <nav>
             <a href="#top">Home</a>
             <a href="about_us.html">About Us</a>
             <a href="contact_us.html">Contact Us</a>
         </nav>
+    </div>
 
         <main>
             <h1>About Us</h1>
