--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -7,14 +7,19 @@
 
     </head>
     <body>
+        <div class="navbar">
+            <div class="company">
+                <h4>Travelot Adventures</h4>
+            </div
         <nav>
             <a href="#top">Home</a>
             <a href="about_us.html">About Us</a>
             <a href="contact_us.html">Contact Us</a>
             <input type="text" placeholder="Enter a keyword or destination">
-            <button type="submit">Search</button>
+            <button type="submit" id="checkLocation">Search</button>
             <input type="Reset" value="Reset">
         </nav>
+    </div>
 
         <main>
             <div>
